[Fixed-20788: Listing page no equal spacing in product in list view]

--- a/app/design/frontend/Magento/blank/Magento_Swatches/web/css/source/_module.less
+++ b/app/design/frontend/Magento/blank/Magento_Swatches/web/css/source/_module.less
@@ -90,6 +90,7 @@
 
             &-options {
                 margin-top: @indent__s;
+                margin-bottom: @indent__s;
 
                 &:focus {
                     box-shadow: none;
